compiler/testData/ir/interpreter/enums3.kt
import kotlin.text.*

const konst a = <!EVALUATED: `IGNORE_CASE`!>RegexOption.IGNORE_CASE.name<!>
const konst b = <!EVALUATED: `0`!>RegexOption.IGNORE_CASE.ordinal<!>
const konst c = <!EVALUATED: `MULTILINE`!>RegexOption.MULTILINE.name<!>
const konst d = <!EVALUATED: `1`!>RegexOption.MULTILINE.ordinal<!>
const konst e = <!EVALUATED: `true`!>RegexOption.IGNORE_CASE == RegexOption.IGNORE_CASE<!>
const konst f = <!EVALUATED: `true`!>RegexOption.IGNORE_CASE != RegexOption.MULTILINE<!>
const konst g = <!EVALUATED: `IGNORE_CASE`!>RegexOption.IGNORE_CASE.toString()<!>
